add returned objects to daily feed post and put requests
